Removed labels from the Infrastructure and Inventory guide.

--- a/doc-Managing_Infrastructure_and_Inventory/Clusters.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/Clusters.adoc
@@ -2,14 +2,14 @@
 = Clusters
 
 Clusters provide high availability and load balancing for a group of hosts.
-The [label]#Clusters# page under [label]#Infrastructure# displays the clusters discovered in your enterprise environment.
+The #Clusters# page under #Infrastructure# displays the clusters discovered in your enterprise environment.
 
 NOTE: Any filter applied will be in effect here.
 
 
 image::images/2202.png[]
 
-Use the [label]#Clusters Taskbar# to manage the analysis and tagging of your clusters.
+Use the #Clusters Taskbar# to manage the analysis and tagging of your clusters.
 These buttons manage multiple clusters at one time.
 To manage one cluster, click on that cluster in the main area of the screen.
 
