--- a/doc-Managing_Infrastructure_and_Inventory/Hosts.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/Hosts.adoc
@@ -1,7 +1,7 @@
 [[_sect_hosts]]
 = Hosts
 
-The [label]#Hosts# page under [label]#Infrastructure# displays the hosts discovered in your enterprise environment.
+The #Hosts# page under #Infrastructure# displays the hosts discovered in your enterprise environment.
 
 NOTE: Any applied filters will be in effect here.
 
