--- a/doc-Managing_Infrastructure_and_Inventory/Instances.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/Instances.adoc
@@ -1,11 +1,11 @@
 [[instances]]
 = Instances
 
-The [label]#Instance# container combined with the ability to analyze information inside each instance provides in-depth information across the cloud environment.
+The #Instance# container combined with the ability to analyze information inside each instance provides in-depth information across the cloud environment.
 This rich set of information enables CloudForms Management Engine users to improve problem resolution times and effectively manage instances in their cloud environment.
 
-The [label]#Instances# pages display all instances the server discovered from your cloud providers.
-The [label]#Instances# taskbar is a menu driven set of buttons that provide access to functions related to instances.
+The #Instances# pages display all instances the server discovered from your cloud providers.
+The #Instances# taskbar is a menu driven set of buttons that provide access to functions related to instances.
 
 
 image::images/4222.png[]
@@ -21,7 +21,7 @@ image::images/4222.png[]
 . Main area in Grid View
 . Cloud/Filter Navigation
 
-Console uses [label]#Virtual Thumbnails# to describe instances and images.
+Console uses #Virtual Thumbnails# to describe instances and images.
 Each thumbnail contains four quadrants by default.
 This allows you to glance at an instance for a quick view of its contents.
 
@@ -167,13 +167,13 @@ image:images/2145.png[]
 
 |===
 
-The [label]#Instances# page has four accordions organizing your instances and images in different ways.
+The #Instances# page has four accordions organizing your instances and images in different ways.
 All of these accordions share a set of common controls
 
-* Use [label]#Instances by Provider# and [label]#Images by Provider# to view your instances and images organized by Provider.
+* Use #Instances by Provider# and #Images by Provider# to view your instances and images organized by Provider.
   In addition, you can see archived and orphaned items here.
-* Use the [label]#Instances# to view, apply filters, and collect information about all of your instances.
-* Use [label]#Images# to view, apply filters, and collect information about all of your images.
+* Use the #Instances# to view, apply filters, and collect information about all of your instances.
+* Use #Images# to view, apply filters, and collect information about all of your images.
 
 Through the console, you are able to view your instances in multiple ways.
 For your instances, you can:
@@ -190,8 +190,8 @@ For your instances, you can:
 [[_sect_filtering_instances_and_images]]
 = Filtering Instances and Images
 
-The [label]#Instance Filter# accordion is provided so that you can easily navigate through groups of instances.
-You can use the ones provided or create your own through [label]#Advanced Filtering# capabilities.
+The #Instance Filter# accordion is provided so that you can easily navigate through groups of instances.
+You can use the ones provided or create your own through #Advanced Filtering# capabilities.
 
 :leveloffset: 3
 include::topics/Using_an_Instance_or_Image_Filter.adoc[]
