--- a/doc-Managing_Infrastructure_and_Inventory/Virtual_Machines.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/Virtual_Machines.adoc
@@ -4,9 +4,9 @@
 The heterogeneous virtual machine container and guest support combined with the ability to analyze information inside the virtual machine - such as disk space, patch level or installed applications - provides in-depth information across the virtual environment.
 This rich set of information enables CloudForms Management Engine users to improve problem resolution times and effectively manage virtual machines.
 
-The [label]#Virtual Machines# pages display all virtual machines that were discovered by your Server.
+The #Virtual Machines# pages display all virtual machines that were discovered by your Server.
 Note that if you have applied a filter to a user, it will be in effect here.
-The [label]#Virtual Machines# taskbar is a menu driven set of buttons that provide access to functions related to virtual machines.
+The #Virtual Machines# taskbar is a menu driven set of buttons that provide access to functions related to virtual machines.
 
 
 image::images/2124.png[]
@@ -22,7 +22,7 @@ image::images/2124.png[]
 . Main area in Grid View
 . Provider/Filter Navigation
 
-The console uses [label]#Virtual Thumbnails# to describe virtual machines and templates.
+The console uses #Virtual Thumbnails# to describe virtual machines and templates.
 Each thumbnail contains four quadrants by default.
 This allows you to glance at a virtual machine for a quick view of its contents.
 
@@ -168,13 +168,13 @@ image:images/2145.png[]
 
 |===
 
-The [label]#Virtual Machines# page has three accordions organizing your virtual machines and templates in different ways.
+The #Virtual Machines# page has three accordions organizing your virtual machines and templates in different ways.
 All of these accordions share a set of common controls:
 
-* Use [label]#VMs and Templates# to view your virtual machines and templates organized by Provider.
+* Use #VMs and Templates# to view your virtual machines and templates organized by Provider.
   In addition, you can see archived and orphaned items here.
-* Use the [label]#VMs# to view, apply filters, and collect information about all of your virtual machines.
-* Use [label]#Templates# to view, apply filters, and collect information about all of your templates.
+* Use the #VMs# to view, apply filters, and collect information about all of your virtual machines.
+* Use #Templates# to view, apply filters, and collect information about all of your templates.
 
 Through the console, you are able to view your virtual machines in multiple ways.
 For your virtual machines, you can:
@@ -190,11 +190,11 @@ For your virtual machines, you can:
 [[_sect_filtering_virtual_machines_and_templates]]
 = Filtering Virtual Machines and Templates
 
-The [label]#Virtual Machine Filter# accordion is provided so that you can easily navigate through groups of virtual machines.
-You can use the ones provided or create your own through [label]#Advanced Filtering# capabilities.
+The #Virtual Machine Filter# accordion is provided so that you can easily navigate through groups of virtual machines.
+You can use the ones provided or create your own through #Advanced Filtering# capabilities.
 
 . Navigate to menu:Infrastructure[Virtual Machines].
-. Go to the [label]#VMs# or [label]#Templates# accordion.
+. Go to the #VMs# or #Templates# accordion.
 . Click on the desired filter from the left pane.
 
 :leveloffset: 3
@@ -234,7 +234,7 @@ To perform a successful analysis, edit the virtual machine's host and enter the 
 
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Click the accordion for the items to analyze.
-. Check the [label]#Virtual Machines# and [label]#Templates# to analyze.
+. Check the #Virtual Machines# and #Templates# to analyze.
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2147.png[]btn:[(Perform SmartState Analysis)] on the taskbar.
 . Click btn:[OK].
 
