--- a/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_single_Host.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_single_Host.adoc
@@ -1,22 +1,22 @@
 = Adding a Single Host
 
 To analyze a host for more detailed information, add it to the VMDB first.
-If the host has not been found during [label]#Host Discovery# or [label]#Provider Refresh#, and the host's IP address is known, use the btn:[Add a New Host] button.
+If the host has not been found during #Host Discovery# or #Provider Refresh#, and the host's IP address is known, use the btn:[Add a New Host] button.
 
 . Navigate to menu:Infrastructure[Hosts].
 . Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[] btn:[(Add a new Host)].
-. Type the [label]#Name#, [label]#Host Name#, and [label]#IP Address# of the host to add. [label]#Name# is how the device is labeled in the console.
-  Select the type of operating system from the [label]#Host Platform# dropdown.
-  If the Host has been found during [label]#Discovery# or [label]#Refresh# and the host's operating system has been identified, the [label]#Host Platform# selector remains disabled.
+. Type the #Name#, #Host Name#, and #IP Address# of the host to add. #Name# is how the device is labeled in the console.
+  Select the type of operating system from the #Host Platform# dropdown.
+  If the Host has been found during #Discovery# or #Refresh# and the host's operating system has been identified, the #Host Platform# selector remains disabled.
   If adding an IPMI server for provisioning, add in the IP address of that host.
 +
-IMPORTANT: The [label]#Host Name# must use a unique fully qualified domain name.
+IMPORTANT: The #Host Name# must use a unique fully qualified domain name.
 +
 
 image::images/2214.png[]
 
-. In the [label]#Credentials# box, the [label]#Default# tab provides fields to type a user name with elevated security credentials and the user's password.
-  If using domain credentials, the format for [label]#User ID# is in the format of [domainname]\[username]. On ESX hosts, if the SSH login is disabled for the [label]#Default# user, type in a user with remote login access on the [label]#Remote Login# tab.
+. In the #Credentials# box, the #Default# tab provides fields to type a user name with elevated security credentials and the user's password.
+  If using domain credentials, the format for #User ID# is in the format of [domainname]\[username]. On ESX hosts, if the SSH login is disabled for the #Default# user, type in a user with remote login access on the #Remote Login# tab.
 +
 
 image::images/2215.png[]
