--- a/doc-Managing_Infrastructure_and_Inventory/topics/Controlling_the_Power_State_of_an_Instance.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Controlling_the_Power_State_of_an_Instance.adoc
@@ -4,7 +4,7 @@ Follow this procedure to control the power states of an instance through the Clo
 
 . Navigate to menu:Clouds[Instances].
 . Click the instance to change the power state.
-. Click [label]#Power Operations#, then click the button for the desired power operation.
+. Click #Power Operations#, then click the button for the desired power operation.
 +
 * Click  image:images/1999.png[] (Start) to start the selected instances.
 * Click  image:images/2000.png[] (Terminate) to terminate the selected instances.
