--- a/doc-Managing_Infrastructure_and_Inventory/topics/Creating_an_Instance_or_Image_Filter.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Creating_an_Instance_or_Image_Filter.adoc
@@ -1,13 +1,13 @@
 = Creating an Instance or Image Filter
 
 . Navigate to menu:Clouds[Instances].
-. Go to the [label]#Instances# or [label]#Images# accordion.
+. Go to the #Instances# or #Images# accordion.
 . Click btn:[All Instances] or btn:[All Images], then click  image:images/2125.png[] btn:[(Advanced Search)] to open the expression editor.
 . Use the expression editor to choose the appropriate options for your criteria.
   Based on what you choose, different options will show.
 +
 * For all of the types of searches, you have the options of creating an alias and requested user input.
-  Select [label]#Use Alias# to create a user friendly name for the search.
+  Select #Use Alias# to create a user friendly name for the search.
   If you are requested user input for the search, this text will show in the dialog box where the input is requested.
 * Click btn:[Field] to create criteria based on field values.
 +
@@ -32,9 +32,9 @@ image::images/2130.png[]
 
 . Click  image:images/1863.png[] btn:[(Commit Expression Element Changes)] to add the expression.
 . Click btn:[Save].
-. Type in a name for the search expression in [label]#Save this Instance search as#.
-  To set the filter to show globally, check [label]#Global Search#.
+. Type in a name for the search expression in #Save this Instance search as#.
+  To set the filter to show globally, check #Global Search#.
 . Click btn:[Save].
 
-The filter is saved and shows in the [label]#My Filters# area of the [label]#Filter# accordion.
-If you checked [label]#Global Search#, the filter shows there.
+The filter is saved and shows in the #My Filters# area of the #Filter# accordion.
+If you checked #Global Search#, the filter shows there.
