--- a/doc-Managing_Infrastructure_and_Inventory/topics/Detecting_Drift_on_Clusters.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Detecting_Drift_on_Clusters.adoc
@@ -11,12 +11,12 @@ Detecting drift provides users with the following benefits:
 
 . Navigate to menu:Infrastructure[Clusters].
 . Click on the cluster to view drift.
-. Click [label]#Relationships# in the Cluster Accordion.
-. Click [label]#Drift History#.
+. Click #Relationships# in the Cluster Accordion.
+. Click #Drift History#.
 . Check the analyses to compare.
 . Click  image:images/1946.png[] btn:[(Drift Analysis)] at the top of the screen.
   The results are displayed.
-. Check the [label]#Comparison# sections on the left to view in your comparison.
+. Check the #Comparison# sections on the left to view in your comparison.
 . Click the plus sign next to the section name to expand it.
 +
 * An item displayed on red text shows a change from the base analysis.
