--- a/doc-Managing_Infrastructure_and_Inventory/topics/Detecting_Drift_on_Hosts.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Detecting_Drift_on_Hosts.adoc
@@ -16,7 +16,7 @@ Detecting drift provides you the following benefits:
 . Check the analyses to compare.
 . Click  image:images/1946.png[] btn:[(Drift)] at the top of the screen.
   The results display.
-. Check the [label]#Comparison# sections on the left to view in your comparison.
+. Check the #Comparison# sections on the left to view in your comparison.
 . Click btn:[Apply].
 . Click the plus sign next to the sections name to expand it.
 +
