--- a/doc-Managing_Infrastructure_and_Inventory/topics/Editing_a_Repository.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Editing_a_Repository.adoc
@@ -5,5 +5,5 @@ Use the following procedure to edit information about the repository, such as th
 . Navigate to menu:Infrastructure[Repositories].
 . Click the repository to edit.
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/1851.png[] btn:[(Edit the Selected Repository)].
-. In [label]#Basic Info#, edit the name and path to connect to the repository.
+. In #Basic Info#, edit the name and path to connect to the repository.
 . Click btn:[Save].
