--- a/doc-Managing_Infrastructure_and_Inventory/topics/Host_Virtual_Summary.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Host_Virtual_Summary.adoc
@@ -3,31 +3,31 @@
 Clicking on a specific host shows the Host's Virtual Thumbnail and an _operating system-sensitive_ screen of host information, called the Host Summary.
 Where applicable, click on a subcategory of the Host Summary to see more detail on that section.
 
-A [label]#Refresh# provides some basic information on the Host.
+A #Refresh# provides some basic information on the Host.
 To get more detail, enter credentials for the host and perform a SmartState Analysis.
 
 The Summary divides into the following categories.
 
-* [label]#Properties# include information such as base operating system, hostname, IP addresses, devices attached to the system, and storage adapters.
+* #Properties# include information such as base operating system, hostname, IP addresses, devices attached to the system, and storage adapters.
   Some categories can be clicked on for additional detail.
   For example, click btn:[Network] to view the network adapters connected to the host.
 +
 
 image::images/2227.png[]
 
-* [label]#Relationships# include information on the provider, cluster, datastores, resource pools, and installed virtual machines.
+* #Relationships# include information on the provider, cluster, datastores, resource pools, and installed virtual machines.
 +
 
 image::images/2228.png[]
 
-* [label]#Security# shows the number of users, groups, patches installed, and firewall rules on the host.
+* #Security# shows the number of users, groups, patches installed, and firewall rules on the host.
   Click on any of these items to see further details.
 +
 NOTE: Run a SmartState Analysis on the host to retrieve this information.
 
-* [label]#Storage Relationships# shows the relationship the host has to LUNs, volumes, and file shares.
-  The [label]#Storage Inventory Role# must be enabled in the zone for these items to be populated.
-* [label]#Configuration# shows the number of packages and services installed.
+* #Storage Relationships# shows the relationship the host has to LUNs, volumes, and file shares.
+  The #Storage Inventory Role# must be enabled in the zone for these items to be populated.
+* #Configuration# shows the number of packages and services installed.
   Click on any of these items to see more details.
 +
 NOTE: Run a SmartState Analysis on the host to retrieve this information.
@@ -35,5 +35,5 @@ NOTE: Run a SmartState Analysis on the host to retrieve this information.
 
 image::images/2230.png[]
 
-* [label]#Smart Management# shows all tags assigned to this host.
-* [label]#Authentication Status# shows all the types of credentials entered for this host and the whether those credentials are valid.
+* #Smart Management# shows all tags assigned to this host.
+* #Authentication Status# shows all the types of credentials entered for this host and the whether those credentials are valid.
