--- a/doc-Managing_Infrastructure_and_Inventory/topics/Refreshing_Instances_and_Images.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Refreshing_Instances_and_Images.adoc
@@ -6,4 +6,4 @@ This includes information such as the power state, container, and hardware devic
 . Navigate to menu:Clouds[Instances].
 . Click the accordion for the desired items to analyze.
 . Click the checkboxes for the items to refresh.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2003.png[]btn:[(Refresh Relationships and Power States)] on the [label]#Instance Taskbar#.
+. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2003.png[]btn:[(Refresh Relationships and Power States)] on the #Instance Taskbar#.
