--- a/doc-Managing_Infrastructure_and_Inventory/topics/Refreshing_Multiple_Repositories.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Refreshing_Multiple_Repositories.adoc
@@ -8,6 +8,6 @@ Refresh a repository for its properties and virtual machines.
 . Click btn:[OK].
 
 Identify a SmartProxy that has access to the repository to refresh it.
-For more information on [label]#Default Repository# SmartProxy parameter, see the _CloudForms General Configuration_ guide.
+For more information on #Default Repository# SmartProxy parameter, see the _CloudForms General Configuration_ guide.
 
-NOTE: If you are using more than one CloudForms Management Engine Appliance, be sure to set the [label]#Default Repository# SmartProxy on all of the appliances.
+NOTE: If you are using more than one CloudForms Management Engine Appliance, be sure to set the #Default Repository# SmartProxy on all of the appliances.
