--- a/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_a_Flavor.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_a_Flavor.adoc
@@ -4,6 +4,6 @@
 You can click on a specific flavor to view its details.
 The screen provides you with a Flavor Accordion and a Flavor Summary. 
 
-* Use Flavor Summary Views to change how you are looking at the [label]#Summary#. 
-* Use the Flavor Accordion to view the [label]#Properties# of the flavor and its [label]#Relationships#. 
-* Use the Flavor Summary to see details on [label]#Properties# ([label]#CPUs#, [label]#CPU Cores#, [label]#Memory#), [label]#Relationships# ([label]#Cloud Provider#, [label]#Instances#), and [label]#Smart Management# ([label]#Company Tags#). 
+* Use Flavor Summary Views to change how you are looking at the #Summary#. 
+* Use the Flavor Accordion to view the #Properties# of the flavor and its #Relationships#. 
+* Use the Flavor Summary to see details on #Properties# (#CPUs#, #CPU Cores#, #Memory#), #Relationships# (#Cloud Provider#, #Instances#), and #Smart Management# (#Company Tags#). 
