--- a/doc-Managing_Infrastructure_and_Inventory/topics/Searching_for_Instances_or_Images.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Searching_for_Instances_or_Images.adoc
@@ -1,6 +1,6 @@
 = Searching for Instances or Images
 
-To the right of the taskbar on the [label]#Instances# page, you can enter names or parts of names for searching.
+To the right of the taskbar on the #Instances# page, you can enter names or parts of names for searching.
 You can search in the following ways.
 
 * Type characters that are _included_ in the name.
@@ -17,7 +17,7 @@ You can search in the following ways.
 
 image::images/2136.png[]
 
-. In the [label]#Name Filter# bar in the upper right corner of the window, type your criteria.
+. In the #Name Filter# bar in the upper right corner of the window, type your criteria.
 . Click  image:images/2135.png[](btn:[Search by Name within results)] or press btn:[Enter].
 . Type in other criteria to filter on what is currently displayed.
 . Click  image:images/2135.png[] btn:[(Search by Name within results)] or press btn:[Enter].
