--- a/doc-Managing_Infrastructure_and_Inventory/topics/Sorting_Instances_and_Images.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Sorting_Instances_and_Images.adoc
@@ -6,10 +6,10 @@ Virtual machines and images can be sorted by Name, Availability Zone, Flavor, Cl
 . Click the accordion for the desired items to sort.
 . To sort instances or images when in grid or tile view:
 +
-* From the [label]#Sort by dropdown#, click the attribute to sort.
+* From the #Sort by dropdown#, click the attribute to sort.
 
 . To sort instances or images when in list view:
 +
-* Select the [label]#List View#.
-* Click on the [label]#Column Name# to sort.
-  For example, click on [label]#Availability Zone# to sort by the name of the availability zone.
+* Select the #List View#.
+* Click on the #Column Name# to sort.
+  For example, click on #Availability Zone# to sort by the name of the availability zone.
