--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_create_a_Host_Filter.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_create_a_Host_Filter.adoc
@@ -13,4 +13,4 @@ NOTE: This title depends on the type of resource you are searching.
 
 . Click btn:[Save].
 
-The filter is saved and displays in the [label]#My Filters# area of the [label]#Filter# accordion.
+The filter is saved and displays in the #My Filters# area of the #Filter# accordion.
