--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_create_a_Virtual_Machine_or_Template_Filter.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_create_a_Virtual_Machine_or_Template_Filter.adoc
@@ -2,13 +2,13 @@
 = Creating a Virtual Machine or Template Filter
 
 . Navigate to menu:Infrastructure[Virtual Machines].
-. Go to the [label]#VMs# or [label]#Templates# accordion.
+. Go to the #VMs# or #Templates# accordion.
 . Click btn:[All VMs] or btn:[All Templates], then click  image:images/2125.png[] btn:[(Advanced Search)] to open the expression editor.
 . Use the expression editor to choose the appropriate options for your criteria.
   Based on what you choose, different options will show.
 +
 * For all of the types of searches, you have the options of creating an alias and requested user input.
-  Select [label]#Use Alias# to create a user friendly name for the search.
+  Select #Use Alias# to create a user friendly name for the search.
   If you are requested user input for the search, this text will show in the dialog box where the input is requested.
 * Click btn:[Field] to create criteria based on field values.
 +
@@ -39,9 +39,9 @@ image::images/2130.png[]
 
 . Click  image:images/1863.png[] btn:[(Commit Expression Element Changes)] to add the expression.
 . Click btn:[Save].
-. Type in a name for the search expression in [label]#Save this VM# search as.
-  (Note that this title depends on the type of resource you are searching.) To set the filter to show globally, check [label]#Global Filter#.
+. Type in a name for the search expression in #Save this VM# search as.
+  (Note that this title depends on the type of resource you are searching.) To set the filter to show globally, check #Global Filter#.
 . Click btn:[Save].
 
-The filter is saved and will show in the [label]#My Filters# area of the [label]#Filter# accordion.
-If you checked [label]#Global Filter#, the filter will show there.
+The filter is saved and will show in the #My Filters# area of the #Filter# accordion.
+If you checked #Global Filter#, the filter will show there.
