--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_view_and_compare_genealogy.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_view_and_compare_genealogy.adoc
@@ -3,8 +3,8 @@
 
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Click the accordion for the item to view genealogy.
-. Click on the item to view its [label]#Summary#.
-. From the [label]#Relationships# area in the [label]#Summary#, click btn:[Genealogy].
+. Click on the item to view its #Summary#.
+. From the #Relationships# area in the #Summary#, click btn:[Genealogy].
 . Check the items to compare.
 . Click  image:images/2148.png[] btn:[(Compare Selected VMs)].
-. For more information on the [label]#Compare# feature, see <<_sect_comparing_virtual_machines_and_templates>>.
+. For more information on the #Compare# feature, see <<_sect_comparing_virtual_machines_and_templates>>.
