--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_view_capacity_and_utilization_charts_for_a_Virtual_Machine.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_view_capacity_and_utilization_charts_for_a_Virtual_Machine.adoc
@@ -9,7 +9,7 @@ The calculation uses the capacity and utilization data collected by CloudForms M
 
 [NOTE]
 ====
-You must have a server with network visibility to your provider assigned the server role of [label]#Capacity & Utilization Collector# to use this feature.
+You must have a server with network visibility to your provider assigned the server role of #Capacity & Utilization Collector# to use this feature.
 
 The virtual machine must be powered on to collect the data.
 ====
@@ -17,15 +17,15 @@ The virtual machine must be powered on to collect the data.
 . From menu:Infrastructure[Virtual Machines], click the accordion that you want to view capacity data for.
 . Click the item you want to view.
 . Click  image:images/1994.png[] btn:[(Monitoring)], and then  image:images/1994.png[] btn:[(Utilization)].
-. From [label]#Interval#, select to view [label]#Daily#, [label]#Hourly#, or [label]#Most Recent Hour# data points.
-  When choosing [label]#Daily#, you can also select the [label]#Date#, and how far back you want to go from that date.
-  When selecting [label]#Hourly#, you can select the date for which you want to view hourly data.
-  If you are using [label]#Time Profiles#, you will be able to select that as an option, also.
+. From #Interval#, select to view #Daily#, #Hourly#, or #Most Recent Hour# data points.
+  When choosing #Daily#, you can also select the #Date#, and how far back you want to go from that date.
+  When selecting #Hourly#, you can select the date for which you want to view hourly data.
+  If you are using #Time Profiles#, you will be able to select that as an option, also.
 +
 
 image::images/2246.png[]
 
-. From [label]#Compare to#, select [label]#Parent Host# or [label]#Parent Cluster#. The capacity and utilization charts for both items will show simultaneously.
+. From #Compare to#, select #Parent Host# or #Parent Cluster#. The capacity and utilization charts for both items will show simultaneously.
 +
 
 image::images/2247.png[]
