--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_view_running_processes_after_collection.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_view_running_processes_after_collection.adoc
@@ -2,7 +2,7 @@
 = Viewing Running Processes after Collection
 
 . Click a virtual machine with collected processes.
-. From the [label]#Diagnostics# area, click btn:[Running Processes].
+. From the #Diagnostics# area, click btn:[Running Processes].
 
 
 image::images/2161.png[]
