--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_an_Instance.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_an_Instance.adoc
@@ -2,7 +2,7 @@
 
 View capacity and utilization data for instances that are part of a cluster.
 
-NOTE: You must have a server with network visibility to your provider assigned the server role of [label]#Capacity & Utilization Collector# to use this feature.
+NOTE: You must have a server with network visibility to your provider assigned the server role of #Capacity & Utilization Collector# to use this feature.
 For more information, see the _CloudForms General Configuration_ guide.
 
 . Navigate to menu:Clouds[Instances].
@@ -14,7 +14,7 @@ For more information, see the _CloudForms General Configuration_ guide.
 
 image::images/2309.png[]
 
-. Select a [label]#Time Profile#.
+. Select a #Time Profile#.
 
 
 image::images/5063.png[]
