--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_a_Tenant.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_a_Tenant.adoc
@@ -3,6 +3,6 @@
 Click on a specific tenant to view its details.
 The screen provides you with a Tenant Accordion and a Tenant Summary. 
 
-* Use Tenant Summary Views to change how you are looking at the [label]#Summary#. 
-* Use the Tenant Accordion to view the [label]#Properties# of the tenant and its [label]#Relationships#. 
-* Use the Tenant Summary to see details on [label]#Relationships# ([label]#Cloud Provider#, [label]#Security Groups#, [label]#Instances#, and [label]#Images#), [label]#Quotas# (including all OpenStack [label]#Compute#, [label]#Network#, and [label]#Volume# quotas) and [label]#Smart Management# ([label]#Company Tags#). 
+* Use Tenant Summary Views to change how you are looking at the #Summary#. 
+* Use the Tenant Accordion to view the #Properties# of the tenant and its #Relationships#. 
+* Use the Tenant Summary to see details on #Relationships# (#Cloud Provider#, #Security Groups#, #Instances#, and #Images#), #Quotas# (including all OpenStack #Compute#, #Network#, and #Volume# quotas) and #Smart Management# (#Company Tags#). 
