--- a/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_Repository.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Adding_a_Repository.adoc
@@ -5,7 +5,7 @@ The VMDB requires a universal naming convention (UNC) network path to the reposi
 
 . Navigate to menu:Infrastructure[Repositories].
 . Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/1848.png[] btn:[(Add a new Repository)].
-. In [label]#Basic Information#, enter a [label]#Name# and a UNC network [label]#Path# to the repository location.
+. In #Basic Information#, enter a #Name# and a UNC network #Path# to the repository location.
 +
 
 image::images/2240.png[]
