--- a/doc-Managing_Infrastructure_and_Inventory/topics/Discovering_Multiple_Hosts.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Discovering_Multiple_Hosts.adoc
@@ -5,7 +5,7 @@ If not using a provider, use CloudForms Management Engine's Discovery to find ho
 . Navigate to menu:Infrastructure[Hosts].
 . Click  image:images/1847.png[] btn:[(Configuration)], then click  image:images/2119.png[] btn:[(Discover Hosts)].
 . Check the types of hosts to discover: ESX or IPMI.
-. Type in a range of [label]#IP Addresses#.
+. Type in a range of #IP Addresses#.
 +
 
 image::images/2213.png[]
