--- a/doc-Managing_Infrastructure_and_Inventory/topics/Loading_a_Report_Filter_or_Search_Expression.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Loading_a_Report_Filter_or_Search_Expression.adoc
@@ -1,7 +1,7 @@
 = Loading a Report Filter or Search Expression
 
 . Navigate to menu:Clouds[Instances].
-. Click the accordion for the items to search (either [label]#Instances# or [label]#Images#).
+. Click the accordion for the items to search (either #Instances# or #Images#).
 . Click  image:images/2125.png[] btn:[(Advanced Search)] to open the expression editor.
 . Click btn:[Load].
 . Select either a saved instance search or an instance report filter.
@@ -12,10 +12,10 @@
 * Click  image:images/1863.png[] btn:[(Commit expression element changes)] to add the changes.
 * Click  image:images/1899.png[] btn:[(Undo the previous change)] to remove the change you just made.
 * Click  image:images/1900.png[] btn:[(Redo the previous change)] to put the change that you just made back.
-* Click  image:images/1901.png[] [label]#(AND with a new expression element)# to create a logical AND with a new expression element.
-* Click  image:images/1902.png[] [label]#(OR with a new expression element)# to create a logical OR with a new expression element.
-* Click  image:images/1903.png[] [label]#(Wrap this expression element with a NOT)# to create a logical NOT on an expression element or to exclude all the items that match the expression.
-* Click  image:images/1904.png[] [label]#(Remove this expression element)# to take out the current expression element.
+* Click  image:images/1901.png[] #(AND with a new expression element)# to create a logical AND with a new expression element.
+* Click  image:images/1902.png[] #(OR with a new expression element)# to create a logical OR with a new expression element.
+* Click  image:images/1903.png[] #(Wrap this expression element with a NOT)# to create a logical NOT on an expression element or to exclude all the items that match the expression.
+* Click  image:images/1904.png[] #(Remove this expression element)# to take out the current expression element.
 
 . Click btn:[Load].
 . Click btn:[Apply].
