--- a/doc-Managing_Infrastructure_and_Inventory/topics/Performing_SmartState_Analysis_on_an_Instance_or_Image.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Performing_SmartState_Analysis_on_an_Instance_or_Image.adoc
@@ -5,7 +5,7 @@ To analyze, a SmartProxy is required to have visibility to the instance's storag
 
 . Navigate to menu:Clouds[Instances].
 . Click the accordion for the items to analyze.
-. Click the [label]#Instance# or [label]#Image# to analyze.
+. Click the #Instance# or #Image# to analyze.
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2147.png[] btn:[(Perform SmartState Analysis)] on the Taskbar.
 . Click btn:[OK].
 
