--- a/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_an_Instance_or_Image.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Reviewing_an_Instance_or_Image.adoc
@@ -1,9 +1,9 @@
 = Reviewing an Instance or Image
 
-After viewing your list of instances and images, click on a specific item to review a [label]#Summary# screen of it.
-The [label]#Summary# screen provides you with a [label]#Virtual Thumbnail# and a [label]#Taskbar#. 
+After viewing your list of instances and images, click on a specific item to review a #Summary# screen of it.
+The #Summary# screen provides you with a #Virtual Thumbnail# and a #Taskbar#. 
 
-* Use the [label]#Taskbar# to perform actions on the selected item. 
-* Use [label]#Summary Views# to change the view type of the summary screen. 
-* Use [label]#Virtual Thumbnails# for a quick glance at the item. 
-* Use the [label]#Summary# screen to see a quick summary of the attributes of the item. 
+* Use the #Taskbar# to perform actions on the selected item. 
+* Use #Summary Views# to change the view type of the summary screen. 
+* Use #Virtual Thumbnails# for a quick glance at the item. 
+* Use the #Summary# screen to see a quick summary of the attributes of the item. 
