--- a/doc-Managing_Infrastructure_and_Inventory/topics/Setting_Ownership_for_Instances_and_Images.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Setting_Ownership_for_Instances_and_Images.adoc
@@ -6,11 +6,11 @@ This allows you an additional way to filter and can be used to enforce quotas.
 . Navigate to menu:Clouds[Instances].
 . Click the accordion for the items to change.
 . Click the checkboxes for the items to set ownership.
-. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2155.png[]btn:[(Set Ownership)] on the [label]#Instance Taskbar#.
-. From the [label]#Select an Owner# dropdown, select a user.
+. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2155.png[]btn:[(Set Ownership)] on the #Instance Taskbar#.
+. From the #Select an Owner# dropdown, select a user.
 +
 
 image::images/2156.png[]
 
-. From the [label]#Select a Group# dropdown, select a group
+. From the #Select a Group# dropdown, select a group
 . Click btn:[Save].
