--- a/doc-Managing_Infrastructure_and_Inventory/topics/Setting_Ownership_of_a_Virtual_Machine_or_Template.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Setting_Ownership_of_a_Virtual_Machine_or_Template.adoc
@@ -7,10 +7,10 @@ This allows you an additional way to filter configuration items.
 . Click the accordion for the items to analyze.
 . Click the item to set ownership.
 . Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2155.png[]btn:[(Set Ownership)] on the taskbar.
-. From the [label]#Select an Owner# dropdown, select a user.
+. From the #Select an Owner# dropdown, select a user.
 +
 
 image::images/2162.png[]
 
-. From the [label]#Select a Group# dropdown, select a group.
+. From the #Select a Group# dropdown, select a group.
 . Click btn:[Save].
