--- a/doc-Managing_Infrastructure_and_Inventory/topics/Storage_Support_Notes_about_Analyzing_from_RHEVM_3.0.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Storage_Support_Notes_about_Analyzing_from_RHEVM_3.0.adoc
@@ -10,7 +10,7 @@ NFS storage does not have these requirements.
 * Enable DirectLUN on host.
 * Enable DirectLUN on the CloudForms Management Engine Appliance.
 To do this, edit the desired Red Hat Enterprise Virtualization storage and get the LUNID value.
-Then, on the CloudForms Management Engine Appliance virtual machine in the Red Hat Enterprise Virtualization user interface, right-click and select menu:Edit[Custom Properties] and enter the following in the [label]#Custom Properties# edit box:
+Then, on the CloudForms Management Engine Appliance virtual machine in the Red Hat Enterprise Virtualization user interface, right-click and select menu:Edit[Custom Properties] and enter the following in the #Custom Properties# edit box:
 +
 ----
 directlun=<LUN ID>:readonly
@@ -28,7 +28,7 @@ If you have multiple data centers with iSCSI or FCP storage, you need a CloudFor
 
 . Set Server Relationship - This is required to allow the virtual machine SmartState analysis job to determine which data center a CloudForms Management Engine Appliance is running and therefore identify what storage it has access to in a Red Hat Enterprise Virtualization environment.
 
-.. After setting up a CloudForms Management Engine Appliance and performing a refresh of the Provider, find the CloudForms Management Engine Appliance in the [label]#Virtual Machine# accordion list and view its summary screen.
+.. After setting up a CloudForms Management Engine Appliance and performing a refresh of the Provider, find the CloudForms Management Engine Appliance in the #Virtual Machine# accordion list and view its summary screen.
 
 .. Click  image:images/1847.png[] btn:[(Configuration)], and then  image:images/2146.png[]btn:[(Edit Server Relationship)]
 
