--- a/doc-Managing_Infrastructure_and_Inventory/topics/Storage_Support_Notes_about_Analyzing_from_RHEVM_3.1.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Storage_Support_Notes_about_Analyzing_from_RHEVM_3.1.adoc
@@ -17,9 +17,9 @@ Note the following requirements when performing SmartState Analysis on Red Hat E
 
 * Other Notes
 
-** The [label]#Set Server Relationship# option enables the VM SmartState Analysis job to determine the datacenter where a CloudForms Management Engine Appliance is running and thus to identify what storage it has access to in a Red Hat Enterprise Virtualization environment.
+** The #Set Server Relationship# option enables the VM SmartState Analysis job to determine the datacenter where a CloudForms Management Engine Appliance is running and thus to identify what storage it has access to in a Red Hat Enterprise Virtualization environment.
 
-*** After setting up a CloudForms Management Engine Appliance and performing a refresh of the provider, find the CloudForms Management Engine Appliance in the [label]#Virtual Machine# accordion list and view its summary screen.
+*** After setting up a CloudForms Management Engine Appliance and performing a refresh of the provider, find the CloudForms Management Engine Appliance in the #Virtual Machine# accordion list and view its summary screen.
 
 *** Click menu:Configuration[Edit Server Relationship].
 
