--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_right-size_a_Virtual_Machine.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_right-size_a_Virtual_Machine.adoc
@@ -2,7 +2,7 @@
 = Right Sizing a Virtual Machine
 
 CloudForms Management Engine uses collected statistics to recommend the best size for a virtual machine.
-CloudForms Management Engine uses the information from the [label]#Normal Operating Range# to calculate the recommendations.
+CloudForms Management Engine uses the information from the #Normal Operating Range# to calculate the recommendations.
 
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Click a virtual machine for right-sizing.
