--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_use_Comparison_Sections.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_use_Comparison_Sections.adoc
@@ -6,13 +6,13 @@ Use the comparison sections to view various comparison data and display the data
 . On the left of a comparison screen, select what categories of properties to display.
 . Click btn:[Apply].
 . Click the plus sign next to the sections name to expand it.
-. The following descriptions pertain to the [label]#Expanded View#				image:images/2023.png[].
+. The following descriptions pertain to the #Expanded View#				image:images/2023.png[].
   Whether you see the value of a property or an icon representing the property depends on the properties type.
 +
 * A property displayed in the same color as the base means that the compared virtual machine matches the base for that property.
 * A property displayed in a different color from the base means that the compared virtual machine does not match the base for that property.
 
-. If you are in the [label]#Compressed View#				image:images/2024.png[], the values of the properties will not be displayed.
+. If you are in the #Compressed View#				image:images/2024.png[], the values of the properties will not be displayed.
   The icons shown below will describe all items.
 +
 * A  image:images/2150.png[] btn:[(checkmark)] means that the compared virtual machine matches the base for that property.
