--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_view_a_groups_members.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_view_a_groups_members.adoc
@@ -1,11 +1,11 @@
 [[_to_view_a_groups_members]]
 = Viewing Group Information for a Virtual Machine or Template
 
-CloudForms Management Engine's [label]#SmartState Analysis# feature returns group information.
+CloudForms Management Engine's #SmartState Analysis# feature returns group information.
 Explore a group to get a list of its users.
 
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Click the accordion for the item to view user information.
-. Click on the item to view its [label]#Summary#.
-. From the [label]#Security# section of the [label]#Virtual Machine Summary#, click btn:[Groups].
+. Click on the item to view its #Summary#.
+. From the #Security# section of the #Virtual Machine Summary#, click btn:[Groups].
 . Click the group to view users.
