--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_view_a_users_group_memberships.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_view_a_users_group_memberships.adoc
@@ -1,11 +1,11 @@
 [[_to_view_a_users_group_memberships]]
 = Viewing User Information for a Virtual Machine or Template
 
-CloudForms Management Engine's [label]#SmartState Analysis# feature returns user information.
+CloudForms Management Engine's #SmartState Analysis# feature returns user information.
 Drill into the user to get details on the user's account, including group memberships.
 
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Click the accordion for the item to view user information.
-. Click on the item to view its [label]#Summary#.
-. From the [label]#Security# section of the [label]#Virtual Machine Summary#, click [label]#Users#.
+. Click on the item to view its #Summary#.
+. From the #Security# section of the #Virtual Machine Summary#, click #Users#.
 . Click the user to view details.
