--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_view_event_logs.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_view_event_logs.adoc
@@ -1,15 +1,15 @@
 [[_to_view_event_logs]]
 = Viewing Event Logs for a Virtual Machine or Template
 
-Using an [label]#Analysis Profile#, collect event log information from your virtual machines.
+Using an #Analysis Profile#, collect event log information from your virtual machines.
 See section _Setting a Default Analysis Profile_ in the _CloudForms General Configuration_ guide.
 
 NOTE: This feature is only available for Windows.
 
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Click the accordion for the item to view event logs.
-. Click on the item to view its [label]#Summary#.
-. From [label]#Diagnostics# click btn:[Event Logs].
+. Click on the item to view its #Summary#.
+. From #Diagnostics# click btn:[Event Logs].
 
 The collected event log entries are displayed.
 Sort this list by clicking on the column headers.
