--- a/doc-Managing_Infrastructure_and_Inventory/topics/To_view_the_timeline_for_a_Virtual_Machine_or_Template.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/To_view_the_timeline_for_a_Virtual_Machine_or_Template.adoc
@@ -6,20 +6,20 @@ View the timeline of events for a virtual machine or template if registered to a
 . Navigate to menu:Infrastructure[Virtual Machines].
 . Click the virtual machine to view the timeline.
 . Click  image:images/1994.png[] btn:[(Monitoring)], and then  image:images/1995.png[] btn:[(Timelines)] on the taskbar.
-. From [label]#Options#, customize the period of time to display, and the types of events to view.
+. From #Options#, customize the period of time to display, and the types of events to view.
 +
 
 image::images/2166.png[]
 +
-* Use the [label]#Interval# dropdown to select hourly or daily data points.
-* Use [label]#Date# to type the date of the timeline to display.
-* If viewing a daily timeline, use [label]#Show# to set how many days back to go.
+* Use the #Interval# dropdown to select hourly or daily data points.
+* Use #Date# to type the date of the timeline to display.
+* If viewing a daily timeline, use #Show# to set how many days back to go.
   The maximum history is 31 days.
-* The three [label]#Event Group# dropdowns allow selection of different event groups to display.
+* The three #Event Group# dropdowns allow selection of different event groups to display.
   Each has its own color.
-* From the [label]#Level# dropdown, select either a [label]#Summary# event or a [label]#Detail# list of events.
-  For example, the detail level of a [label]#Power On# event might include the power on request, the starting event, and the actual Power On event.
-  If you select [label]#Summary#, you only see the [label]#Power On# event in the timeline.
+* From the #Level# dropdown, select either a #Summary# event or a #Detail# list of events.
+  For example, the detail level of a #Power On# event might include the power on request, the starting event, and the actual Power On event.
+  If you select #Summary#, you only see the #Power On# event in the timeline.
 
 . To see more detail on an item in the timeline, click on it.
   A balloon appears with a clickable link to the resource.
