--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Availability_Zone_Relationships.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Availability_Zone_Relationships.adoc
@@ -1,8 +1,8 @@
 = Viewing Availability Zone Relationships
 
-Use the Availability Zone Accordion's [label]#Relationship# section to see items related to an availability zone.
+Use the Availability Zone Accordion's #Relationship# section to see items related to an availability zone.
 
 . Navigate to menu:Clouds[Availability Zones].
 . Click the availability zone to view the configuration.
-. From the Availability Zone Accordion, click [label]#Relationships#.
+. From the Availability Zone Accordion, click #Relationships#.
 . Click the type of resource relationship to view as a list.
