--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Host.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Capacity_and_Utilization_Charts_for_a_Host.adoc
@@ -2,14 +2,14 @@
 
 View Capacity & Utilization data for hosts that are part of a cluster.
 
-NOTE: Your CloudForms Management Engine server requires network visibility to the provider assigned the [label]#Server Role# of [label]#Capacity & Utilization Collector# to enable this feature.
+NOTE: Your CloudForms Management Engine server requires network visibility to the provider assigned the #Server Role# of #Capacity & Utilization Collector# to enable this feature.
 
 . Navigate to menu:Infrastructure[Hosts].
 . Click the Host to view capacity data.
 . Click  image:images/1994.png[] btn:[(Monitoring)], and then  image:images/1994.png[] btn:[(Utilization)] or from the Host accordion, click menu:Properties[Capacity & Utilization].
-. From [label]#Interval#, select to view hourly or daily data points and the dates to view data.
-  Use [label]#Group by# to group the lines by SmartTags.
-  Use [label]#Time Profiles# to select a time range for the data.
+. From #Interval#, select to view hourly or daily data points and the dates to view data.
+  Use #Group by# to group the lines by SmartTags.
+  Use #Time Profiles# to select a time range for the data.
 +
 
 image::images/2220.png[]
