--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Security_Groups.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_Security_Groups.adoc
@@ -6,9 +6,9 @@ This procedure describes how to view security groups.
 . Navigate to menu:Clouds[Security Groups]. 
 . Click the desired security groups for viewing the details. 
 +
-* In [label]#Properties#, you can view the basic information of the security group. 
-* In [label]#Relationships#, you can view the cloud provider and the instances associated with the security group. 
-* In [label]#Firewall Rules#, you can view a list of ports and IP ranges that are accessible. 
+* In #Properties#, you can view the basic information of the security group. 
+* In #Relationships#, you can view the cloud provider and the instances associated with the security group. 
+* In #Firewall Rules#, you can view a list of ports and IP ranges that are accessible. 
 +
 NOTE: This box is not available if you have not set any rules for your security group. 
 
