--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_a_Group_Information_for_an_Instance_or_Image.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_a_Group_Information_for_an_Instance_or_Image.adoc
@@ -1,11 +1,11 @@
 [[_viewing_a_group_information_for_an_instance_or_image]]
 = Viewing Group Information for an Instance or Image
 
-CloudForms Management Engine's [label]#SmartState Analysis# feature returns group information.
+CloudForms Management Engine's #SmartState Analysis# feature returns group information.
 Explore the group to get a list of its users.
 
 . Navigate to menu:Clouds[Instances].
 . Click the accordion for the item to view user information.
-. Click on the item to view its [label]#Summary#.
-. From the [label]#Security# section of the [label]#Instance Summary#, click btn:[Groups].
+. Click on the item to view its #Summary#.
+. From the #Security# section of the #Instance Summary#, click btn:[Groups].
 . Click the group to view users.
