--- a/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_the_Host_Timeline.adoc
+++ b/doc-Managing_Infrastructure_and_Inventory/topics/Viewing_the_Host_Timeline.adoc
@@ -5,18 +5,18 @@ View the timeline of events for the virtual machines registered to a host.
 . Navigate to menu:Infrastructure[Hosts].
 . Click the Host to view the timeline.
 . Click  image:images/1994.png[] btn:[(Monitoring)], and then  image:images/1995.png[] btn:[(Timelines)] or from the Host Accordion, click menu:Properties[Timelines].
-. From [label]#Options#, customize the period of time to display and the types of events to see.
+. From #Options#, customize the period of time to display and the types of events to see.
 +
-* Use [label]#Show# to select types of events to show on the timeline.
-* Use the [label]#Interval# dropdown to select hourly or daily data points.
-* Use [label]#Date# to type the date the timeline displays.
-* If you select to view a daily timeline, use [label]#Show# to set how many days back to go.
+* Use #Show# to select types of events to show on the timeline.
+* Use the #Interval# dropdown to select hourly or daily data points.
+* Use #Date# to type the date the timeline displays.
+* If you select to view a daily timeline, use #Show# to set how many days back to go.
   The maximum history is 31 days.
-  If selecting [label]#Hourly#, select the interval to see.
-* From the [label]#Level# dropdown, select either a [label]#Summary# event or a [label]#Detail# list of events.
-  For example, the detail level of a [label]#Power On# event might include the power on request, the starting event, and the actual [label]#Power On# event.
-  If you select [label]#Summary#, only the Power On event appears in the timeline.
-* The three [label]#Event Group# dropdowns allow selection of different groups of events to display.
+  If selecting #Hourly#, select the interval to see.
+* From the #Level# dropdown, select either a #Summary# event or a #Detail# list of events.
+  For example, the detail level of a #Power On# event might include the power on request, the starting event, and the actual #Power On# event.
+  If you select #Summary#, only the Power On event appears in the timeline.
+* The three #Event Group# dropdowns allow selection of different groups of events to display.
   Each group has its own color.
 
 . To see more detail on an item in the timeline, click on it.
