Removed labels from the Appliance hardening guide.

--- a/doc-Appliance_Hardening_Guide/Keys.adoc
+++ b/doc-Appliance_Hardening_Guide/Keys.adoc
@@ -15,7 +15,7 @@ The following procedure shows how to generate a new encryption key.
 . Select **Generate Custom Encryption Key**.
 . A prompt asks if for confirmation to overwrite the existing key.
   Enter [userinput]#Y#.
-. Enter [userinput]#1# for [label]#1) Create key#.
+. Enter [userinput]#1# for #1) Create key#.
 . The appliance generates the new key.
   Press any key to complete this procedure.
 
