--- a/doc-Appliance_Hardening_Guide/UI_Password.adoc
+++ b/doc-Appliance_Hardening_Guide/UI_Password.adoc
@@ -9,11 +9,11 @@ Changing the [literal]+admin+ password uses the same process as changing any sta
 .Procedure: Changing the admin Password
 . Access your appliance through your web browser and login
 . Navigate to menu:Configure[Configuration].
-. In the accordion tree on the left, click on [label]#Access Control#, then select the [label]#Administrator# under the [label]#Users# section.
+. In the accordion tree on the left, click on #Access Control#, then select the #Administrator# under the #Users# section.
   This displays the details for the [literal]+admin+ user.
 . On the details page, select menu:Configuration[Edit this user] from the toolbar.
-. Enter a new password in the [label]#Change Password / Confirm Password# fields.
-. Click [label]#Save# at the bottom of the page.
+. Enter a new password in the #Change Password / Confirm Password# fields.
+. Click #Save# at the bottom of the page.
 . Log out of the user interface.
 . Test your new password by logging into the user interface.
 +
