--- a/doc-Appliance_Hardening_Guide/Updates.adoc
+++ b/doc-Appliance_Hardening_Guide/Updates.adoc
@@ -15,7 +15,7 @@ The following tools are used during the update process:
 
 IMPORTANT: The update worker synchronizes the VMDB with the status of available CloudForms Management Engine content every 12 hours. 
 
-NOTE: Servers with the [label]#RHN Mirror# role also act as a repository for other Appliances to pull CloudForms Management Engine packages updates. 
+NOTE: Servers with the #RHN Mirror# role also act as a repository for other Appliances to pull CloudForms Management Engine packages updates. 
 
 The btn:[Red Hat Updates] page enables you to register appliances.
 You need the following to register: 
@@ -25,8 +25,8 @@ You need the following to register:
 
 .Procedure: Registering a CloudForms Management Engine Appliance
 . Log in to the Appliance as the [literal]+root+ user. 
-. Navigate to menu:Configure[Configuration]. Select [label]#Region# in the accordion menu and click the [label]#Red Hat Updates# tab. 
-. In [label]#Red Hat Software Updates#, click btn:[Edit Registration]. 
+. Navigate to menu:Configure[Configuration]. Select #Region# in the accordion menu and click the #Red Hat Updates# tab. 
+. In #Red Hat Software Updates#, click btn:[Edit Registration]. 
 . You can register the CloudForms Management Engine Appliance using one of three available options: 
 +
 * Red Hat Subscription Management 
@@ -36,30 +36,30 @@ You need the following to register:
 The Subscription Management Service you register with will provide your systems with updates and allow additional management. 
 
 .To register with Red Hat Subscription Management: 
-.. In [label]#Register to#, select [label]#Red Hat Subscription Management#. 
-.. Enter [label]#Red Hat Subscription Management Address#. The default is [literal]+subscription.rhn.redhat.com+. 
-.. Enter [label]#Repository Name#. The default is [literal]+cf-me-5.4-for-rhel-6-rpms rhel-server-rhscl-6-rpms+, which are the Red Hat CloudForms repository and the Red Hat Software Collections repository. 
+.. In #Register to#, select #Red Hat Subscription Management#. 
+.. Enter #Red Hat Subscription Management Address#. The default is [literal]+subscription.rhn.redhat.com+. 
+.. Enter #Repository Name#. The default is [literal]+cf-me-5.4-for-rhel-6-rpms rhel-server-rhscl-6-rpms+, which are the Red Hat CloudForms repository and the Red Hat Software Collections repository. 
 .. To use a HTTP proxy, select btn:[Use HTTP Proxy] and enter your proxy details. 
 .. Enter your Red Hat account information; click btn:[Validate]. 
 .. Click btn:[Save]. 
 
 .To register with Red Hat Satellite 5: 
-.. In [label]#Register to#, select [label]#Red Hat Satellite 5#. 
-.. Enter [label]#Red Hat Satellite 5 Address#. The default is [literal]+subscription.rhn.redhat.com+. 
-.. Enter [label]#Repository Name#. The default is [literal]+rhel-x86_64-server-6-cf-me-4.0 rhel-x86_64-server-6-rhscl-1+, which are the Red Hat CloudForms repository and the Red Hat Software Collections repository. 
+.. In #Register to#, select #Red Hat Satellite 5#. 
+.. Enter #Red Hat Satellite 5 Address#. The default is [literal]+subscription.rhn.redhat.com+. 
+.. Enter #Repository Name#. The default is [literal]+rhel-x86_64-server-6-cf-me-4.0 rhel-x86_64-server-6-rhscl-1+, which are the Red Hat CloudForms repository and the Red Hat Software Collections repository. 
 .. To use a HTTP proxy, select btn:[Use HTTP Proxy] and enter your proxy details. 
 .. Enter your Red Hat Satellite account information. 
 .. Click btn:[Save]. 
 
 .To register with Red Hat Satellite 6: 
-.. In [label]#Register to#, select [label]#Red Hat Satellite 6#. 
-.. Enter [label]#Red Hat Satellite 6 Address#. The default is [literal]+subscription.rhn.redhat.com+. 
-.. Enter [label]#Repository Name#. The default is [literal]+cf-me-5.4-for-rhel-6-rpms rhel-server-rhscl-6-rpms+, which are the Red Hat CloudForms repository and the Red Hat Software Collections repository. 
+.. In #Register to#, select #Red Hat Satellite 6#. 
+.. Enter #Red Hat Satellite 6 Address#. The default is [literal]+subscription.rhn.redhat.com+. 
+.. Enter #Repository Name#. The default is [literal]+cf-me-5.4-for-rhel-6-rpms rhel-server-rhscl-6-rpms+, which are the Red Hat CloudForms repository and the Red Hat Software Collections repository. 
 .. To use a HTTP proxy, select btn:[Use HTTP Proxy] and enter your proxy details. 
 .. Enter your Red Hat Satellite account information; click btn:[Validate]. 
 .. Click btn:[Save]. 
 
-After registering, the following options are available in the [label]#Appliance Updates# section of the [label]#Red Hat Updates# tab: 
+After registering, the following options are available in the #Appliance Updates# section of the #Red Hat Updates# tab: 
 
 [cols="1,1", frame="all", options="header"]
 |===
